--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
               </div>
 
             </form>
-            <div class="step__progress"></div>
+            <div class="progress"></div>
           </div>
         </div>
       </div>
     </main>
   </div>
 </body>
-<script src="js/main.js"></script>
+<script src="./main.js"></script>
 
 </html>
